[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/misc/frost_lance.png" type="Texture" id=1]
[ext_resource path="res://scripts/skills/IceLance.gd" type="Script" id=2]
[ext_resource path="res://assets/particles/frost_particle.png" type="Texture" id=3]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionPolygon2D:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Spin_clockwise"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionPolygon2D:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Spin_counter_clockwise"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="ParticlesMaterial" id=4]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 75.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[sub_resource type="CircleShape2D" id=5]
radius = 25.0

[node name="IceLance" type="Area2D" groups=["FrozenGaugeOne", "Ice"]]
position = Vector2( 319.612, 159.099 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 5, 5 )
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Spin_clockwise"
anims/RESET = SubResource( 1 )
anims/Spin_clockwise = SubResource( 2 )
anims/Spin_counter_clockwise = SubResource( 3 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -80.2142, -80.3146, -79.5071, -60.5156, -69.6076, -49.2019, -74.9109, -39.6559, -75.2645, -26.5745, -60.4152, -25.1603, -50.8693, -35.0598, -23.9992, -7.83614, -25.767, 8.07376, -6.67507, 26.4585, 6.40641, 26.105, 33.2765, 51.2073, 22.6699, 60.7532, 23.7305, 76.3096, 40.7011, 74.8953, 47.4186, 65.703, 59.4394, 80.5522, 79.9455, 80.5522, 79.9455, 60.7532, 65.4498, 49.793, 75.7029, 39.1864, 76.0564, 25.0443, 60.5001, 25.0443, 51.3077, 34.5903, 25.4983, 8.4273, 25.4983, -5.36128, 5.34573, -25.1603, -5.61443, -25.1603, -33.1916, -49.909, -23.6457, -58.7478, -23.2921, -75.0113, -39.9091, -75.3648, -47.6873, -67.5867, -59.001, -81.3753 )

[node name="TargetPlayerTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="FrostParticles" type="Particles2D" parent="."]
scale = Vector2( 2.5, 2.5 )
amount = 6
lifetime = 0.5
explosiveness = 0.5
process_material = SubResource( 4 )
texture = ExtResource( 3 )

[node name="PlayerDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
shape = SubResource( 5 )

[node name="DestroyedTimer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true
autostart = true

[connection signal="area_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_area_entered"]
[connection signal="timeout" from="DestroyedTimer" to="." method="_on_DestroyedTimer_timeout"]
